# dcc

./: .gitignore  Cargo.toml  LICENSE  README.md  dcc
src/: compiler.rs  errors.rs  lib.rs  main.rs
src/backend_x64/: asm_ast.rs  backend_table.rs  emit_asm.rs  fixup.rs  mod.rs  platform.rs  register_allocate.rs  replace_pseudoregisters.rs  translate_ir.rs
src/common/: char_escape.rs  constant.rs  ctype.rs  mod.rs  symbol_table.rs  type_table.rs
src/lexer/: README.md  logos_lexer.rs  mod.rs  token.rs
src/optimizer/: constant_folding.rs  control_flow.rs  copy_propagation.rs  dead_store_elimination.rs  mod.rs  unreachable_code_elimination.rs
src/parser/: ast.rs  declarator_ast.rs  mod.rs  parser.rs  precedence.rs
src/semantic_analysis/: mod.rs  resolve_identifiers.rs  statement_analysis.rs  type_check.rs  visitor.rs
src/tacky/: emit.rs  ir.rs  mod.rs
