[package]
name = "dcc"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["display", "from", "is_variant", "unwrap"] }
thiserror = "2.0.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_derive = "1.0.228"
logos = "0.15.1"
clap = { version = "4.5.53", features = ["derive"] }
